<resources>
    <string name="app_name">CreaVision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_prompt">Enter Prompt</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="create">Create</string>
    <string name="prompt_result">Prompt Result</string>
    <string name="creating">Creating...</string>
    <string name="art_style">Art Style</string>
    <string name="suprise_me">Suprise Me</string>
    <string name="see_all">See All</string>
    <string name="what_do_you_want_to_create">What do you want to create?</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="image_downloading">Image Downloading</string>
    <string name="image_could_not_be_downloaded">Image Could Not Be Downloaded</string>
    <string name="image_saved">Image Saved</string>
    <string name="your_arts">Your Arts</string>


    <string name="fast_processing">Fast Processing</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="unlimited_usage">Unlimited Usage</string>
    <string name="generate_4_outputs_at_once">Generate 4 Outputs at Once</string>
    <string name="continue_string">Continue</string>
    <string name="choose_your_plan">Choose Your Plan</string>

    <string name="thank_you_for_subscribing">Thank You for Subscribing!</string>
    <string name="enjoy_features">Enjoy all features and benefits without any restrictions</string>
    <string name="manage_subscribe">Manage Subscribe</string>
    <string name="update_to_pro">Update to Pro</string>
    <string name="no_favorites">No Favorites</string>


</resources>